<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="network_connection_offline">Jesteś offline!</string>
    <string name="network_connection_back_online">Jesteś z powrotem online!</string>
    <string name="network_connection_using_app_offline">Jesteś offline. Przedstawiony zostanie przestarzały przepływ informacji.</string>
    <string name="breaking_news">Najświeższe wiadomości</string>
    <string name="breaking_news_desc">Twój osobisty kanał</string>
    <string name="sections_desc">Wybierz interesujące Cię tematy</string>
    <string name="splash_description">Sieć społecznościowa dla wiadomości</string>
    <string name="please_wait_loading">Proszę czekać, trwa ładowanie...</string>
    <string name="tab_title_for_you">Dla Ciebie</string>
    <string name="tab_title_trending">Trendy</string>
    <string name="tab_title_local">Lokalne</string>
    <string name="tab_title_breaking">Wiadomości z ostatniej chwili</string>
    <string name="tab_title_latest">Najnowsze</string>
    <string name="create_account">Załóż konto, aby mieć pełny dostęp do wszystkich funkcji</string>
    <string name="sing_up_with_google">Zarejestruj się przez Google</string>
    <string name="sing_up_with_email">Zarejestruj się przez e-mail</string>
    <string name="log_in">Zaloguj się</string>
    <string name="skip_for_now">Pomiń na razie</string>
    <string name="proceed">Przejdź dalej</string>
    <string name="terms_description">Artykuły przedstawione w tej aplikacji są pobierane z źródeł online. Nie odzwierciedlają one koniecznie opinii tej aplikacji ani jej administracji. Korzystając z aplikacji, zgadzasz się z naszą Polityką Prywatności i Warunkami Korzystania</string>
    <string name="sections_title">Wybierz sekcje, które lubisz</string>
    <string name="sections_description">Dla Ciebie zostanie utworzona strona z wiadomościami zależnie od wybranej sekcji</string>
    <string name="ok">Ok</string>
    <string name="need_to_be_registered_or_logged_in_like">Musisz być zarejestrowany lub zalogowany, aby polubić wiadomości</string>
    <string name="need_to_be_registered_or_logged_in_like_comment">Musisz być zarejestrowany lub zalogowany, aby polubić komentarz</string>
    <string name="need_to_be_registered_or_logged_in_leave_comment">Musisz być zarejestrowany lub zalogowany, aby dodać komentarz</string>
    <string name="need_to_be_registered_or_logged_in_bookmark_news">Musisz być zarejestrowany lub zalogowany, aby dodać wiadomość do ulubionych</string>
    <string name="error">Błąd</string>
    <string name="leave_a_comment">Dodaj komentarz</string>
    <string name="there_are_no_comments">Brak komentarzy</string>
    <string name="comments">Komentarze</string>
    <string name="news">Wiadomości</string>
    <string name="sections">Sekcje</string>
    <string name="follow">Obserwuj</string>
    <string name="profile">Profil</string>
    <string name="continue_reading">Czytaj dalej</string>
    <string name="share">Udostępnij</string>
    <string name="followers_count">47 obserwujących</string>
    <string name="followers">Obserwujący</string>
    <string name="publications">Publikacje</string>
    <string name="follow_sections_description">Wybór sekcji decyduje o wynikach wyszukiwania w twoim feedzie.</string>
    <string name="add_section">Dodaj sekcje</string>
    <string name="edit_profile">Edytuj profil</string>
    <string name="log_in_message">Zaloguj się lub zarejestruj, aby uzyskać pełny dostęp do wszystkich funkcji</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sing_up">Zarejestruj się</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="sing_in_with_google">Zaloguj się za pomocą konta Google</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="name">Imię</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="other">Inna</string>
    <string name="year_of_birth">Rok urodzenia</string>
    <string name="password_again">Powtórz hasło</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="error_name_empty">Imię nie może być puste</string>
    <string name="error_name_short">Imię musi zawierać co najmniej dwie litery</string>
    <string name="error_name_wrong_letters">Imię może zawierać tylko litery łacińskie</string>
    <string name="error_email_empty">E-mail nie może być pusty</string>
    <string name="error_email_invalid">Nieprawidłowy adres e-mail</string>
    <string name="error_sex_choose">Musisz wybrać płeć</string>
    <string name="error_year_choose">Musisz wybrać rok urodzenia</string>
    <string name="error_password_empty">Hasło nie może być puste</string>
    <string name="error_password_short">Hasło musi zawierać co najmniej 6 znaków</string>
    <string name="error_password_characters_length">Hasło musi zawierać litery łacińskie oraz symbole , . _ i mieć długość 6-12 znaków</string>
    <string name="error_password_again_match">Hasła nie pasują do siebie</string>
    <string name="favorites_tab">Ulubione</string>
    <string name="no_saved_news">Nie zapisałeś/aś jeszcze\nżadnej wiadomości</string>
    <string name="find_news">Szukaj wiadomości</string>
    <string name="profile_section_title">Wybór sekcji wpływa na wyniki wyszukiwania w kanale wiadomości</string>
    <string name="no_sections">Wybór sekcji wpływa na wyniki wyszukiwania w kanale wiadomości</string>
    <string name="add_first_section">Dodaj swoją pierwszą sekcję</string>
    <string name="hide_section_title">Czy na pewno chcesz ukryć tę sekcję z kanału wiadomości?</string>
    <string name="hide_section_description">Można ją przywrócić w dowolnym momencie</string>
    <string name="want_to_hide">Tak, chcę ją ukryć</string>
    <string name="no">Nie</string>
    <string name="options">Opcje</string>
    <string name="write_to_support">Napisz do pomocy technicznej</string>
    <string name="app_rating">Oceń aplikację</string>
    <string name="share_app">Udostępnij aplikację</string>
    <string name="privacy_policy">Polityka prywatności</string>
    <string name="about">O nas</string>
    <string name="terms_of_use">Warunki korzystania</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="support">Wsparcie techniczne</string>
    <string name="support_description">Jeśli masz problemy z korzystaniem z aplikacji lub potrzebujesz pomocy z serwerami, proszę do nas napisać</string>
    <string name="send">Wyślij</string>
    <string name="your_message_was_sent">Twoja wiadomość została wysłana do pomocy technicznej</string>
    <string name="check_updates">Sprawdź aktualizacje</string>
    <string name="version">Wersja %s</string>
    <string name="log_out">Wyloguj</string>
    <string name="cancel">Anuluj</string>
    <string name="leave_your_comment">Napisz swój komentarz</string>
    <string name="leave_my_comment">Zostaw mój komentarz</string>
    <string name="empty_comment">Komentarz nie może być pusty</string>
    <string name="comment_was_left">Komentarz został dodany</string>
    <string name="profile_was_updated">Twój profil został pomyślnie zaktualizowany</string>
    <string name="exit_warning_message">Kliknij jeszcze raz, aby wyjść z aplikacji.</string>
    <string-array name="gender_list">
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="year_list">

        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
        <item>1919</item>
        <item>1918</item>
        <item>1917</item>
        <item>1916</item>
        <item>1915</item>
        <item>1914</item>
        <item>1913</item>
        <item>1912</item>
        <item>1911</item>
        <item>1910</item>
        <item>1909</item>
        <item>1908</item>
        <item>1907</item>
        <item>1906</item>
        <item>1905</item>
    </string-array>
</resources>