<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="onSignInClick"
            type="View.OnClickListener" />

        <variable
            name="onSignUpClick"
            type="View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_22"
            android:paddingTop="@dimen/margin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/profile_menu"
            android:paddingEnd="@dimen/margin_8"
            app:title="@string/profile"
            app:titleTextAppearance="@style/Text_700.SP26.Black"
            app:titleTextColor="@color/black" />

        <ImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/ic_add_user" />

        <TextView
            android:id="@+id/tv_log_in_message"
            style="@style/Text_500.SP18.Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_54"
            android:layout_marginTop="@dimen/margin_28"
            android:layout_marginEnd="@dimen/margin_54"
            android:text="@string/log_in_message"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_user_icon" />

        <TextView
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@drawable/ripple_gray"
            android:clickable="true"
            android:onClick="@{onSignInClick}"
            android:drawablePadding="@dimen/margin_24"
            android:focusable="true"
            android:fontFamily="@font/poppins_500"
            android:paddingStart="@dimen/margin_60"
            android:paddingTop="@dimen/margin_14"
            android:paddingEnd="@dimen/margin_60"
            android:paddingBottom="@dimen/margin_14"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_log_in_message" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@drawable/ripple_pink"
            android:clickable="true"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:focusable="true"
            android:onClick="@{onSignUpClick}"
            android:fontFamily="@font/poppins_500"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/sing_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>