<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="onAddSectionClick"
            type="View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_sections_title"
            style="@style/Text_500.SP16.Gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@color/white"
            android:text="@string/profile_section_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/rv_sections"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sections_title"
            tools:listitem="@layout/holder_section_category" />

        <TextView
            android:id="@+id/tv_no_sections"
            style="@style/Text_500.SP16.Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:text="@string/no_sections"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sections_title" />


        <TextView
            android:id="@+id/btn_add_first_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@drawable/ripple_pink"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_500"
            android:onClick="@{onAddSectionClick}"
            android:paddingTop="@dimen/margin_14"
            android:paddingBottom="@dimen/margin_14"
            android:text="@string/add_first_section"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_no_sections"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>