<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="onSaveChangesClick"
            type="View.OnClickListener" />

        <variable
            name="userName"
            type="String" />

        <variable
            name="userEmail"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="@dimen/elevation_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/elevation_4"
                android:paddingTop="@dimen/margin_24"
                app:navigationIcon="@drawable/ic_navigation_back_gray"
                app:title="@string/edit_profile"
                app:titleTextAppearance="@style/Text_700.SP26.Black"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/name"
            app:boxStrokeColor="@color/gray"
            app:hintTextAppearance="@style/Text_500.SP16.Gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                style="@style/Text_500.SP16.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:paddingStart="@dimen/margin_24"
                android:text="@{userName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            app:boxStrokeColor="@color/gray"
            app:hintTextAppearance="@style/Text_500.SP16.Gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/Text_500.SP16.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:paddingStart="@dimen/margin_24"
                android:text="@{userEmail}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@drawable/ripple_pink"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_500"
            android:onClick="@{onSaveChangesClick}"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/save_changes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>