<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:paddingStart="@dimen/margin_24"
        android:paddingEnd="@dimen/margin_24">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/splash_logo_width_150"
            android:layout_height="@dimen/splash_logo_width_150"
            android:layout_marginTop="@dimen/margin_250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_app_logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:fontFamily="@font/poppins_700"
            android:text="@string/breaking_news"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_7"
            android:fontFamily="@font/poppins_500"
            android:text="@string/splash_description"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_20"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_please_wait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginBottom="@dimen/margin_18"
            android:fontFamily="@font/poppins_500"
            android:text="@string/please_wait_loading"
            android:textAlignment="center"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pb_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginStart="@dimen/margin_84"
            android:layout_marginEnd="@dimen/margin_84"
            android:layout_marginBottom="@dimen/margin_150"
            android:max="100"
            android:progressDrawable="@drawable/progress_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_please_wait"
            android:layout_marginTop="@dimen/margin_18"
            tools:progress="50" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>